:bug: [PillSwitch] Fix broken layout

--- a/examples/src/components/Page/Page.scss
+++ b/examples/src/components/Page/Page.scss
@@ -34,7 +34,7 @@ body {
 
     &::before {
       top: 0;
-      box-shadow: 0 #{- (get-spacing(fattest))} 0 get-spacing(fattest) get-color(coal, dark);
+      box-shadow: 0 -#{get-spacing(fattest)} 0 get-spacing(fattest) get-color(coal, dark);
     }
 
     &::after {
